TestSuite/errors/err0415a.pas
function f1 := exit;

begin
end.